feat(sway): tweaks

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -2,7 +2,7 @@ exit-on-keyboard-focus-loss = no
 fields=name,generic,comment,categories,filename,keywords
 font=Hack Nerd Font Mono:size=13
 fuzzy=yes
-; icon-theme=Papirus-Dark
+icon-theme=Adwaita
 icons-enabled=yes
 show-actions=yes
 terminal=kitty -e
