feat(kitty): theme update

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -3,4 +3,7 @@ font_size 12
 
 copy_on_select yes
 
-include gruvbox.conf
+# BEGIN_KITTY_THEME
+# Gruvbox Dark Hard
+include current-theme.conf
+# END_KITTY_THEME
