--- a/home/.config/kitty/current-theme.conf
+++ b/home/.config/kitty/current-theme.conf
@@ -1,13 +1,13 @@
-## name: Gruvbox Dark Hard
+## name: Gruvbox Dark Soft
 ## author: Pavel Pertsev
 ## license: MIT/X11
-## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-dark-hard.conf
+## upstream: https://raw.githubusercontent.com/gruvbox-community/gruvbox-contrib/master/kitty/gruvbox-dark-soft.conf
 
 
 selection_foreground    #ebdbb2
 selection_background    #d65d0e
 
-background              #1d2021
+background              #32302f
 foreground              #ebdbb2
 
 color0                  #3c3836
