--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -12,7 +12,7 @@ set $right L
 # My apps
 set $term kitty
 set $browser firefox
-set $fileManager thunar
+set $fileManager nemo
 set $menu fuzzel | xargs swaymsg exec --
 
 ### Output configuration
