chore(sway): Move directories

--- a/home/.config/swaylock/config
+++ b/home/.config/swaylock/config
@@ -1,5 +1,5 @@
 ignore-empty-password
 show-failed-attempts
-image=~/Desktops/monokay.png
-image=HDMI-A-1:~/Desktops/WebbyRelax.png
-image=HDMI-A-2:~/Desktops/WebbyMoon.png
+image=~/ResilioSync/Action/Desktops/arch-monokay.png
+image=HDMI-A-1:~/ResilioSync/Action/Desktops/WebbyRelax.png
+image=HDMI-A-2:~/ResilioSync/Action/Desktops/WebbyMoon.png
