--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -36,6 +36,7 @@ set-option -g renumber-windows on
 set-option -sg escape-time 10
 set-option -sg focus-events on
 set-option -sa terminal-overrides ',*256color:RGB'
+set-option -sa terminal-overrides ',xterm-kitty:RGB'
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
