--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -38,6 +38,10 @@ set-option -sg focus-events on
 set-option -sa terminal-overrides ',*256color:RGB'
 set-option -sa terminal-overrides ',xterm-kitty:RGB'
 
+# always have lazygit at hand
+unbind g
+bind g display-popup -d '#{pane_current_path}' -w 80% -h 80% -E lazygit
+
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
