--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -36,7 +36,7 @@ set-option -g renumber-windows on
 set-option -sg escape-time 10
 set-option -sg focus-events on
 set-option -sa terminal-overrides ',*256color:RGB'
-set-option -sa terminal-overrides ',xterm-kitty:RGB'
+set-option -sa terminal-overrides ',*kitty:RGB'
 
 # always have lazygit at hand
 unbind g
@@ -44,7 +44,6 @@ bind g display-popup -d '#{pane_current_path}' -w 80% -h 80% -E lazygit
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
-set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'maxpetretta/tmux-monokai-pro'
@@ -57,6 +56,8 @@ set-option -g @resurrect-strategy-nvim 'session'
 # tpm continuum
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
 set-option -g @continuum-restore 'on'
+# Vital Movement
+# set-option -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Sometimes we need to be local
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
