feat(zsh): remove

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -57,7 +57,7 @@ set-option -g @resurrect-strategy-nvim 'session'
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
 set-option -g @continuum-restore 'on'
 # Vital Movement
-# set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Sometimes we need to be local
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
