feat(fuzzel): theme and term updates

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,11 +1,11 @@
 exit-on-keyboard-focus-loss = no
 fields=name,generic,comment,categories,filename,keywords
-font=Hack Nerd Font Mono:size=13
+font=Noto Sans Regular:size=22
 fuzzy=yes
-icon-theme=Adwaita
+icon-theme=Mint-Y-Yaru
 icons-enabled=yes
 show-actions=yes
-terminal=kitty -e
+terminal=foot -e
 width=30
 
 
