--- a/home/.config/foot/foot.ini
+++ b/home/.config/foot/foot.ini
@@ -1,4 +1,4 @@
 font=PragmataProMonoLiga Nerd Font:size=12
 
 [main]
-include=/usr/share/foot/themes/gruvbox-dark
+include=~/.config/foot/gruvbox-dark
