fix: tmux theme

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -62,10 +62,8 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 # Theme
-# set -g @plugin 'maxpetretta/tmux-monokai-pro'
-# set -g @monokai-plugins "cpu-usage ram-usage"
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @plugin 'maxpetretta/tmux-monokai-pro'
+set -g @monokai-plugins "cpu-usage ram-usage"
 
 # Sometimes we need to be local
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
