--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -50,7 +50,7 @@ gaps outer 3
 # Color Control
 exec gammastep
 # 1p
-exec 1password --quiet
+exec ELECTRON_OZONE_PLATFORM_HINT="" 1password --silent
 # cliphost store
 exec wl-paste --type text --watch cliphist store #Stores only text data
 exec wl-paste --type image --watch cliphist store #Stores only image data
@@ -72,7 +72,7 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     # clipboard manager
     bindsym $mod+Shift+V exec cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
     # 1Password
-    bindsym $mod+Shift+Space exec /usr/bin/1password --quick-access
+    bindsym $mod+Shift+Space exec 1password --quick-access
 
     # Kill focused window
     bindsym $mod+Q kill
