style: waybar and fuizzel

--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,12 +1,12 @@
 exit-on-keyboard-focus-loss = no
 fields=name,generic,comment,categories,filename,keywords
-font=Noto Sans Regular:size=22
+font=Noto Serif:size=20
 fuzzy=yes
 icon-theme=Mint-Y-Yaru
 icons-enabled=yes
 show-actions=yes
 terminal=foot -e
-width=30
+width=20
 
 
 [colors]
