--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -13,7 +13,7 @@ set $right L
 set $term foot
 set $browser firefox
 set $fileManager thunar
-set $menu fuzzel | xargs swaymsg exec --
+set $menu rofi -show combi | xargs swaymsg exec --
 
 ### Output configuration
 # man 5 sway-output
@@ -44,7 +44,7 @@ gaps inner 5
 smart_gaps on
 
 default_border pixel 2
-default_floating_border normal
+default_floating_border none
 
 set $color_normal_bg     #282828
 set $color_normal_red    #cc241d
@@ -88,7 +88,7 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     #Lock it
     bindsym $mod+Escape exec ~/.config/sway/lock_screen.sh
     # clipboard manager
-    bindsym $mod+Shift+V exec cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
+    bindsym $mod+Shift+V exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
     # 1Password
     bindsym $mod+Shift+Space exec 1password --quick-access
 
