--- a/home/.config/foot/foot.ini
+++ b/home/.config/foot/foot.ini
@@ -1,4 +1,4 @@
-font=PragmataProMonoLiga Nerd Font:size=12
+font=PragmataProMonoLiga Nerd Font:size=12,JetBrainsMono Nerd Font Mono,Noto Color Emoji
 
 [main]
 include=~/.config/foot/gruvbox-dark
