--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -85,8 +85,14 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     bindsym $mod+E exec $fileManager
     # Start my browser
     bindsym $mod+Shift+B exec $browser
-    #Lock it
+    # Lock it
     bindsym $mod+Escape exec ~/.config/sway/lock_screen.sh
+    # Screenshot
+    bindsym $mod+Shift+4 exec ~/.config/sway/screenshot-full.sh
+    bindsym $mod+Shift+5 exec ~/.config/sway/screenshot-select.sh
+    bindsym $mod+print exec ~/.config/sway/record-screen.sh
+
+
     # clipboard manager
     bindsym $mod+Shift+V exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
     # 1Password
@@ -169,16 +175,16 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     bindsym $mod+9 workspace number 9
     bindsym $mod+0 workspace number 10
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
+    # bindsym $mod+Shift+1 move container to workspace number 1
+    # bindsym $mod+Shift+2 move container to workspace number 2
+    # bindsym $mod+Shift+3 move container to workspace number 3
+    # bindsym $mod+Shift+4 move container to workspace number 4
+    # bindsym $mod+Shift+5 move container to workspace number 5
+    # bindsym $mod+Shift+6 move container to workspace number 6
+    # bindsym $mod+Shift+7 move container to workspace number 7
+    # bindsym $mod+Shift+8 move container to workspace number 8
+    # bindsym $mod+Shift+9 move container to workspace number 9
+    # bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
