--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -69,4 +69,4 @@ set -g @continuum-restore 'on'
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run-shell '~/.tmux/plugins/tpm/tpm'
+run-shell '~/.config/tmux/plugins/tpm/tpm'
