fix(tmux): terminal features

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -46,9 +46,8 @@ set -g clock-mode-style 24
 # NeoVim Requests this
 set -sg escape-time 10
 set -sg focus-events on
-set -sa terminal-overrides ',*256color:RGB'
-set -sa terminal-overrides ',*kitty:RGB'
-set -sa terminal-features ",xterm-*:RGB,tmux-*:RGB"
+set -a terminal-features 'tmux-256color:RGB'
+set -a terminal-features '*kitty:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
