feat(tmux): minimize tmux theme

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -53,8 +53,8 @@ set -a terminal-features '*kitty:RGB'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # Theme
-set -g @plugin 'maxpetretta/tmux-monokai-pro'
-set -g @monokai-plugins "cpu-usage ram-usage"
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
 # tpm restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-save 'S'
