fix(tmux): wezterm terminal

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -48,6 +48,7 @@ set -sg escape-time 10
 set -sg focus-events on
 set -a terminal-features '*kitty:RGB'
 set -a terminal-features 'foot:RGB'
+set -a terminal-features 'xterm-256color:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
