--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -46,9 +46,9 @@ set -g clock-mode-style 24
 # NeoVim Requests this
 set -sg escape-time 10
 set -sg focus-events on
-set -a terminal-features '*kitty:RGB'
 set -a terminal-features 'foot:RGB'
 set -a terminal-features 'xterm-256color:RGB'
+set -a terminal-features 'xterm-kitty:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
