--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -4,6 +4,6 @@ font_size 13
 copy_on_select yes
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark Soft
+# Gruvbox Dark
 include current-theme.conf
 # END_KITTY_THEME
