fix(waybar): clock style

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -49,7 +49,7 @@
     "spacing": 10
   },
   "clock": {
-    "format": " {:%R  %m/%d/}",
+    "format": "  {:%R  %m/%d}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     // "format": "{: %I:%M %p   %a, %b %e}",
     // "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
