--- a/home/.config/mako/config
+++ b/home/.config/mako/config
@@ -1,11 +1,35 @@
-background-color=#282828CC
-text-color=#ebdbb2CC
-border-color=#a89984CC
-progress-color=#689d6aCC
+sort=-time
+layer=overlay
+background-color=#1e1e2e
+width=330
+margin=20,20,0
+padding=7
+height=110
+border-size=2
+border-color=#31748f
+text-color=#e0def4
+border-radius=10
+icons=1
+max-icon-size=64
+default-timeout=5000
+ignore-timeout=1
+font=Hack 12
+progress-color=over #313244
 
-default-timeout=60000
-group-by=desktop-entry
+[urgency=low]
+border-color=#e0def4
+
+[urgency=normal]
+border-color=#3e8fb0
+
+[urgency=high]
+border-color=#eb6f92
+default-timeout=0
+
+[category=mpris]
+default-timeout=2000
+group-by=category
 
 [desktop-entry=com.plexamp.Plexamp]
-default-timeout=10000
-ignore-timeout=1
+default-timeout=2000
+group-by=category
