fix(tmux): truecolor in wezterm

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -47,7 +47,7 @@ set -g clock-mode-style 24
 set -sg escape-time 10
 set -sg focus-events on
 set -a terminal-features 'foot:RGB'
-set -a terminal-features 'xterm-256color:RGB'
+set -a terminal-features '*256color:RGB'
 set -a terminal-features 'xterm-kitty:RGB'
 
 # List of plugins
