feat: sample_convert script
make my life much easier with a sample converter

--- a/home/.config/Brewfile
+++ b/home/.config/Brewfile
@@ -26,7 +26,9 @@ brew 'zoxide'
 ## Fun stuff
 
 brew 'fastfetch'
+brew 'ffmpeg'
 brew 'marp-cli' # slides
+brew 'media-info'
 brew 'poppler' # pdf tools
 brew 'qpdf' # moar pdf
 brew 'streamlink'
